[package]
name = "pinocchio-rent-bug-test-litesvm"
version = "0.1.0"
edition = "2021"

[dependencies]
litesvm = "=0.10.0"
solana-account = "3.4"
solana-address = { version = "2.6", features = ["std"] }
solana-instruction = "3.4"
solana-keypair = "3"
solana-rent = "3"
solana-signer = "3"
solana-transaction = { version = "3", features = ["bincode"] }
