# Standalone workspace: mollusk 0.13.0 (used by test-mollusk-0130) and 0.13.4
# are in the same semver range, so they cannot share the root Cargo.lock.
[workspace]

[package]
name = "test-mollusk-0134"
version = "0.1.0"
edition = "2021"

[dependencies]
mollusk-svm = "=0.13.4"
mollusk-svm-programs-token = "=0.13.4"
solana-account = "3.4"
solana-address = { version = "2.6", features = ["std"] }
solana-instruction = "3.2"
